--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Stopwatch Web Application</h1>
+    <h1 id="stopwatch">Stopwatch Web Application</h1>
     <div id="box">
-        <div id="hr1"></div>
-        <div id="hr2"></div>
-        <div id="min1"></div>
-        <div id="min2"></div>
-        <div id="sec1"></div>
-        <div id="sec2"></div>
-        <div id="ms1"></div>
-        <div id="ms2"></div>
+        <div id="hr1"><h1>0</h1></div>
+        <div id="hr2"><h1>0</h1></div>
+        <div id="min1"><h1>0</h1></div>
+        <div id="min2"><h1>0</h1></div>
+        <div id="sec1"><h1>0</h1></div>
+        <div id="sec2"><h1>0</h1></div>
     </div>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
