--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="stopwatch">Stopwatch Web Application</h1>
+    <button id="button">Mode</button>
     <div id="box">
         <div id="hr1"><h1>0</h1></div>
         <div id="hr2"><h1>0</h1></div>
