--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stopwatch Web Application</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +21,7 @@
     <button id="stop">Stop</button>
     <button id="reset">Reset</button>
     <button id="lap">Laps</button>
+    <div id="laps"></div>
     <script src="script.js"></script>
 </body>
 </html>
